Create new header file for convex hull algorithm

--- a/uebung1/CMakeLists.txt
+++ b/uebung1/CMakeLists.txt
@@ -5,6 +5,6 @@ cmake_minimum_required(VERSION 2.8)
 # Project's name
 
 project(uebung1)
-set (PROJECT_SOURCES point.h polygon.h rectangle.h)
+set (PROJECT_SOURCES point.h polygon.h rectangle.h convex_hull.h)
 
 add_executable(ue1 main.cpp ${PROJECT_SOURCES})
