Change the folder structure in the project

--- a/uebung1/CMakeLists.txt
+++ b/uebung1/CMakeLists.txt
@@ -5,6 +5,8 @@ cmake_minimum_required(VERSION 2.8)
 # Project's name
 
 project(uebung1)
-set (PROJECT_SOURCES point.h polygon.h rectangle.h convex_hull.h)
+include_directories("./include")
+set (PROJECT_SOURCES main.cpp)
 
-add_executable(ue1 main.cpp ${PROJECT_SOURCES})
+
+add_executable(ue1 ${PROJECT_SOURCES})
