--- a/uebung3/src/ping_pong/package.xml
+++ b/uebung3/src/ping_pong/package.xml
@@ -4,7 +4,7 @@
   <name>ping_pong</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="hernan@todo.todo">hernan</maintainer>
+  <maintainer email="hfvaldesg@gmail.com">hernan</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
